--- a/package.json
+++ b/package.json
@@ -1,94 +1,100 @@
 {
-  "name": "fca-horizon-remastered",
-  "version": "1.5.2",
-  "description": "Facebook-chat-api protect and deploy by Kanzu and HZI Team",
-  "main": "index.js",
+  "name": "LunarKrystal",
+  "version": "4.5.0",
+  "description": "Developed by LunarKrystal",
+  "main": "mirai.js",
   "scripts": {
-    "test": "mocha"
+    "start": "node index",
+    "login": "node login",
+    "test": "node --trace-warnings --use_strict --async-stack-traces mirai"
   },
-  "author": "Avery, David, Maude, Benjamin, UIRI, KanzuWakazaki",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/KanzuXHorizon/Fca-Horizon-Remastered/issues"
-  },
-  "homepage": "https://github.com/KanzuXHorizon/Fca-Horizon-Remastered#readme",
   "repository": {
     "type": "git",
-    "url": "git://github.com/KanzuXHorizon/Fca-Horizon-Remastered.git"
+    "url": "git+https://github.com/chungdat02/Mirai-V2.git"
   },
+  "author": "Cao.C.Đạt",
+  "license": "GPL-3.0",
   "dependencies": {
-    "aes-js": "latest",
-    "ansi-to-html": "latest",
-    "assert": "latest",
-    "better-sqlite3": "7.6.2",
-    "bluebird": "latest",
-    "chalk": "4.1.2",
-    "cheerio": "latest",
-    "crypto-js": "latest",
-    "deasync": "^0.1.28",
-    "duplexify": "^4.1.2",
-    "encode32": "latest",
-    "express": "latest",
-    "file-url": "^3.0.0",
+    "@google/generative-ai": "^0.17.0",
+    "@miraipr0ject/assets": "^1.0.9",
+    "acorn": "^8.10.0",
+    "aes-js": "^3.1.2",
+    "ansi-to-html": "^0.7.2",
+    "archiver": "^6.0.1",
+    "axios": "^1.7.2",
+    "better-sqlite3": "^7.6.2",
+    "body-parser": "^1.20.2",
+    "canvas": "^2.11.2",
+    "cfonts": "^3.3.0",
+    "chalk": "^4.1.2",
+    "chalkercli": "^1.6.4",
+    "cheerio": "1.0.0-rc.12",
+    "chess.js": "^1.0.0-beta.6",
+    "child_process": "",
+    "cors": "^2.8.5",
+    "crypto": "",
+    "crypto-js": "",
+    "deasync": "^0.1.30",
+    "deep-extend": "^0.6.0",
+    "dotenv": "^16.4.5",
+    "encode32": "^1.1.0",
+    "eval": "^0.1.8",
+    "express": "^4.18.2",
+    "fast-speedtest-api": "^0.3.2",
+    "figlet": "^1.8.0",
+    "file-size": "^1.0.0",
+    "form-data": "^4.0.0",
+    "fs": "^0.0.1-security",
+    "fs-extra": "^11.2.0",
+    "googleapis": "^134.0.0",
     "got": "^11.8.6",
-    "https-proxy-agent": "latest",
+    "image-downloader": "^4.3.0",
+    "imgur": "^1.0.2",
     "is-hexcolor": "^1.0.0",
-    "lodash": "latest",
-    "moment": "^2.29.4",
+    "jimp": "^0.22.8",
+    "json-bigint": "^1.0.0",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.43",
+    "morse-decoder": "^3.0.1",
     "mqtt": "^4.3.7",
-    "npmlog": "latest",
-    "os": "latest",
-    "path": "latest",
-    "pretty-ms": "7.0.1",
-    "readable-stream": "^4.4.0",
-    "readline": "latest",
-    "request": "latest",
-    "speakeasy": "latest",
-    "totp-generator": "latest",
-    "tough-cookie": "^4.1.2",
-    "uuid": "latest",
-    "ws": "^8.13.0",
-    "sqlite3": "^5.0.2",
-    "figlet": "latest"
+    "ms": "",
+    "node-cron": "^3.0.3",
+    "node-disk-info": "^1.3.0",
+    "node-superfetch": "^0.2.3",
+    "npmlog": "^7.0.1",
+    "os-utils": "^0.0.14",
+    "pastebin-api": "^4.0.1",
+    "path": "^0.12.7",
+    "pidusage": "^3.0.2",
+    "pretty-ms": "^7.0.1",
+    "puppeteer": "^19.11.1",
+    "readline": "",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6",
+    "semver": "",
+    "sequelize": "^6.33.0",
+    "simple-youtube-api": "",
+    "sqlite3": "^5.1.6",
+    "string-similarity": "",
+    "systeminformation": "^5.18.4",
+    "tinyurl": "^1.1.7",
+    "totp-generator": "0.0.14",
+    "translate": "^1.2.3",
+    "uniqid": "^5.4.0",
+    "uuid": "^10.0.0",
+    "weather-js": "^2.0.0",
+    "websocket-stream": "^5.5.2",
+    "wikijs": "^6.4.1",
+    "ws": "^8.18.1",
+    "youtube-search-api": "^1.2.1",
+    "ytdl-core": "^4.11.5"
   },
-  "engines": {
-    "node": ">=14.x"
+  "bugs": {
+    "url": "https://github.com/chungdat02/Mirai-V2/issues"
   },
+  "homepage": "https://github.com/chungdat02/Mirai-V2#readme",
   "devDependencies": {
-    "eslint": "^8.40.0",
-    "mocha": "latest",
-    "prettier": "latest"
+    "node": "^14.21.3"
   },
-  "eslintConfig": {
-    "env": {
-      "es6": true,
-      "node": true
-    },
-    "extends": "eslint:recommended",
-    "parserOptions": {
-      "sourceType": "module"
-    },
-    "rules": {
-      "linebreak-style": [
-        "error",
-        "unix"
-      ],
-      "semi": [
-        "error",
-        "always"
-      ],
-      "no-unused-vars": [
-        1,
-        {
-          "argsIgnorePattern": "^_"
-        }
-      ]
-    }
-  },
-  "keywords": [
-    "Fca horizon",
-    "fca-horizon-remastered",
-    "horizon fca",
-    "horizon"
-  ]
+  "keywords": []
 }
